--- a/frontend/src/app/features/payments/payment-list/payment-list.scss
+++ b/frontend/src/app/features/payments/payment-list/payment-list.scss
@@ -1,6 +1,7 @@
 .page-header {
   display: flex;
   justify-content: flex-end;
+  flex-direction: row;
   margin-bottom: 24px;
 }
 
